# kwin-clicktile

./: CMakeLists.txt  LICENSE  README.md  install_uninstall.sh
contents/ui/: main.qml
kcm/: configmodule.cpp  metadata.json
src/: effect.cpp  effect.h  input.cpp  input_filter.cpp  input_filter.h  log.cpp  main.cpp  metadata.json  overlay.cpp  settings.cpp  settings.h  tiles.cpp  window_preview.cpp
